--- a/TODO.txt
+++ b/TODO.txt
@@ -8,9 +8,11 @@ control sobre shift y ctrl para cambiar la cantidad de cosas compradas y el prec
 
 ---- TODO  GAME ----
 
+poner los formularios en vez de prompts 1D sabado!!
+
 Estructuras que buildeen mas de 1 recurso, y que, consecuentemente, puedan construirse con mas de un recurso(alguna idea es armar un array de produccion y precio) READY
 
-Indicacion de un recurso/s inicial/es 1h
+Indicacion de un recurso/s inicial/es READY
 
 Recursos que necesitan para funcionar, por ejemplo no se pueden construir  casas sin madera. 1h
 
